# SQLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  linkedin-post.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-17-repo-cleanup.md
docs/superpowers/specs/: 2026-04-17-repo-cleanup-design.md
examples/: README.md  langchain_integration.py  llamaindex_integration.py
scripts/: compare_retrievers.py  create_eval_fixture.py  create_sqlite_fixture.py  run_eval.py  test_llm_descriptions.py  validate_bigquery.py
sqlens/: __init__.py  cli.py
sqlens/catalog/: models.py  serializers.py  store.py
sqlens/connectors/: base.py  bigquery.py  memory.py  mysql.py  postgresql.py  sqlite.py
sqlens/enrichment/: base.py  descriptions.py  domains.py  relations.py  samples.py  stats.py
sqlens/introspection/: engine.py
sqlens/retrieval/: base.py  cosine.py  domain_filter.py  keyword.py  vector.py
tests/evals/: conftest.py  metrics.py  test_context_quality.py  test_retrieval_quality.py
tests/evals/fixtures/: techmart_ground_truth.json
tests/fixtures/: ecommerce.db  ecommerce_catalog.json
tests/integration/: test_sqlite_e2e.py
tests/unit/: test_cli.py  test_core.py
validation_output/: sample_prompt.txt  thelook_catalog.json  thelook_catalog_gemini.json
